--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Don't count. Just shoot them goals.">
+	<meta name="description" content="Less counting, more shooting!">
     <title>Goal Counter</title>
   </head>
   <body>
